--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<nav>
 			<ul>
 				<li>
-					<icon>Procoders</icon>
+					<h1>Procoders</h1>
 				</li>
 				
 				<li>
@@ -59,7 +59,7 @@
 	
 	<article>
 	
-		<section>
+		<section class="sectionOne">
 			<ul>
 				<li>
 					<ul>
@@ -108,7 +108,7 @@
 			</ul>
 		</section>
 		
-		<section>
+		<section class="sectionTwo">
 			<ul>
 			
 				<li>
